--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "rename-blogs": "node scripts/rename-blogs-to-numbered.js",
+    "rename-blogs-by-id": "node scripts/rename-blogs-by-id.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^24.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
